# bits_client

./: Cargo.toml  README.md  todo.txt
bits/: Cargo.toml
bits/src/: callback.rs  lib.rs  status.rs
bits_server/src/: bits_server.rs  task.rs
comedy/: Cargo.toml
comedy/src/: com.rs  error.rs  guid.rs  handle.rs  lib.rs  process.rs  variant.rs  wide.rs
examples/: test_client.rs
filetime_win/: Cargo.toml
filetime_win/src/: lib.rs
guid_win/: Cargo.toml
guid_win/src/: lib.rs
named_pipe/: Cargo.toml
named_pipe/src/: lib.rs  overlapped.rs
src/: bits_client.rs  bits_protocol.rs  in_process.rs  lib.rs  main.rs  task.rs
src/in_process/: mod.rs  tests.rs
task_service/: Cargo.toml
task_service/src/: lib.rs  taskschd.rs
variant/: Cargo.toml
variant/src/: bstr.rs  lib.rs
