[package]
name = "bits_client"
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MPL-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bits = { path = "./bits" }
comedy = { path = "./comedy" }
failure = "0.1.4"
guid_win = { path = "./guid_win" }
