[package]
name = "comedy"
description = "Assorted utilities and wrappers for Windows error handling, handles, and COM"
keywords = ["windows", "com", "win32"]
categories = ["api-bindings", "os::windows-apis"]
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[dependencies]
failure = "0.1.4"
failure_derive = "0.1.4"
winapi = { version = "0.3.6", features = ["basetsd",
                                          "combaseapi",
                                          "errhandlingapi",
                                          "handleapi",
                                          "impl-default",
                                          "minwindef",
                                          "objbase",
                                          "winbase",
                                          "winerror",
                                          "wtypes",
                                          "wtypesbase"] }
wio = "0.2.0"
