[package]
name = "named_pipe"
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[dependencies]
comedy = { path = "../comedy" }
failure = "0.1.4"
failure_derive = "0.1.4"
rand = { version = "0.5.5", features = ["i128_support"] }
winapi = { version = "0.3.6", features = ["errhandlingapi",
                                          "fileapi",
                                          "ioapiset",
                                          "minwinbase",
                                          "minwindef",
                                          "namedpipeapi",
                                          "sddl",
                                          "synchapi",
                                          "winbase",
                                          "winerror",
                                          ] }
wio = "0.2.0"
