[package]
name = "task_service"
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[dependencies]
comedy = { path = "../comedy" }
failure = "0.1.4"
variant = { path = "../variant" }
winapi = { version = "0.3.6", features = ["minwindef",
                                          "ntdef",
                                          "winerror"] }
wio = "0.2"
