[package]
name = "variant"
description = "Variant for Visual Basic-flavored Windows APIs"
keywords = ["windows", "win32"]
categories = ["api-bindings", "os::windows-apis"]
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
license = "MIT/Apache-2.0"

[dependencies]
winapi = {version = "0.3.6", features = ["minwindef",
                                         "oaidl",
                                         "oleauto",
                                         "wtypes",
                                         "wtypesbase"]}
